--- a/src/components/sections/Footer.astro
+++ b/src/components/sections/Footer.astro
@@ -5,7 +5,7 @@
 <footer class="pt-12 text-center">
   <hr class="my-4 border-t-2 border-base-content/20" />
   <a 
-    href="https://atl5d.com" 
+    href="https://t.me/hahznft" 
     class="align-middle text-sm block py-4 no-underline text-base-content/50 hover:text-base-content"
   >
     <span class="items-center">
@@ -22,7 +22,7 @@
         loading="lazy"
       /> -->
       <span>
-        Built by <span class="font-bold underline">ATL5D</span>: Create an Atlanta Link in Bio.
+        Built by <span class="font-bold underline">Wizard of Hahz</span>.
       </span>
     </span>
   </a>
